# VE482

./: README.md
homework/h1/: VE482 Homework 1.md
homework/h1/src/: ex5.sh
homework/h2/src/: VE482 Homework 2.md
homework/h3/: VE482 Homework 3.md  readme.md
homework/h3/ex2/: CMakeLists.txt  generate.cpp  generateFile  h3.c  hw3  list.c  list.h
homework/h4/: ex4.c  readme.md
homework/h4/ex3/: ex3.sh  ex3_r.sh
homework/h5/: readme.md
homework/h5/ex3/: banker.cpp  ex3
homework/h6/: ReadMe.md  VE482 Homework 6.md  test  test.c
homework/h7/: ReadMe.md  VE482 Homework 7.md  chpid.c
homework/h8/: VE482 Homework 8.md
lab/l2/: VE482 Lab 2 Report.md
lab/l3/: VE482 Lab 3 Report.md
lab/l4/: VE 482 Lab 4 Report.md
lab/l5/: VE482 Lab 5 Report.md  readme.md
lab/l5/list/: list.c  list.h  logic.c
lab/l5/part1src/: cmd.c  interface.c  interface.h  list.c  list.h  listCmd  listMenu  logic.c  logic.h  menu.c  rand_char.txt  rand_double.txt  rand_int.txt
lab/l6/: readme.md
lab/l6/csv/: Makefile  csvPlugin.c  interface.c  interface.h  list.c  list.h  logic.c  logic.h  pluginDiscover.c  pluginDiscover.h  pluginManager.c  pluginManager.h  txtPlugin.c
project/p1/src/: CMakeLists.txt  P1.c  buildin.h  builtin.c  constant.h  error.c  execute.c  functions.h  pipe.c  readline.c  redirection.h  signal.c  var.h
review/final/src/: VE482 Final Review.md
review/mid/: VE482 Review.md
